# ProjectNavigator

./: .gitignore  Plan-Phase1.md  README.md  main.py  pyproject.toml  requirements.txt
config/: ingestion_rules.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
src/api/: routes.py  session.py
src/core/: ingest.py  rag.py  router.py
