[project]
name = "controlled-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "chromadb",
    "sentence-transformers",
    "langchain",
    "langchain-text-splitters",
    "langchain-openai",
    "langchain-google-genai",
    "pydantic",
    "python-dotenv",
    "pyyaml"
]
